[Fix #101] Update Eclipse project settings for newer Eclipse versions
Signed-off-by: Kevin Grigorenko <kevin.grigorenko@us.ibm.com>